# moteus

./: .bazelignore  .bazelrc  .eslintrc.js  .gitignore  .travis.yml  404.html  BUILD  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  RELEASING.md  WORKSPACE  index.html  main.py  make_release.py  mkdocs.yml  moteus-debug.gdb  mpat.html  mpat2.html  objects.inv  package.json  requirements-docs.txt  sitemap.xml  style.css  travis-ci.sh  tsconfig.json
configs/: 20200122-beta-devkit-6008.cfg  20200807-qdd100.cfg  20200819-devkit-4114.cfg  20210424-devkit.cfg  20210504-qdd100.cfg  20220407-devkit.cfg  20220719-devkit.cfg  moteus-devkit.cfg
docs/: .gitignore  Readme.md  _config.yml  api_brainstorm.md  getting_started.md  index.md  mpat-uitest.html  mpat.html  mpat2.html  power_dist.md  quick-start.md  raspberry_pi.md  reference.md
fw/: BUILD  abs_port.cc  abs_port.h  absolute_encoder_validator.h  aksim2.h  aksim2_validator.h  as5047.h  auto_calibrator.cc  auto_calibrator.h  aux_adc.h  aux_common.h  aux_mbed.h  aux_port.h  bissc.h  bissc_extract.h  bldc_servo.cc  bldc_servo.h  bldc_servo_control.h  bldc_servo_position.h  bldc_servo_structs.h  board_debug.cc  board_debug.h  bootloader.h  can_bootloader.cc  ccm.h  clock_manager.h  cui_amt21.h  cui_amt22.h  custom_protocol.h  drv8323.cc  drv8323.h  error.cc  error.h  f4_run_openocd_noreset.sh  fdcan.cc  fdcan.h  fdcan_micro_server.h  fdcanusb_register_example.py  firmware_info.cc  firmware_info.h  (+67 more)
guides/: index.html
integration/: index.html
javascripts/: iv-viewer.min.js  toc-collapse.js
lib/: BUILD
lib/cpp/: BUILD  CMakeLists.txt
lib/cpp/cmake/: moteus-config.cmake.in
lib/cpp/examples/: BUILD  bandwidth_test.cc  diagnostic_protocol.cc  multiple_cycle.cc  nlateral_teleop.cc  simple.cc  simple_teleop.cc  stop.cc  timeout_debug.cc  wait_complete.cc
lib/cpp/mjbots/: BUILD
lib/cpp/mjbots/moteus/: BUILD  moteus.h  moteus_multiplex.h  moteus_optional.h  moteus_protocol.h  moteus_tokenizer.h  moteus_transport.h
lib/cpp/mjbots/moteus/test/: moteus_protocol_test.cc  moteus_test.cc
lib/python/: BUILD  README.md  pyproject.toml  pyproject.toml.TPL  sample.py  setup.cfg  setup.py  setup.py.TPL
lib/python/examples/: .gitignore  bandwidth_test.py  csv_output.py  diagnostic_protocol.py  gpio.py  move_to.py  multiservo.py  pi3hat_multiservo.py  read_unsolicited.py  ruckig_multiservo.py  simple.py  synchronized_movement.py  trajectory_test.py  wait_complete.py
lib/python/moteus/: BUILD  __init__.py  aioserial.py  aiostream.py  async_timeout.py  calibrate_encoder.py  command.py  device_info.py  enumerate_socketcan.py  export.py  fdcanusb.py  fdcanusb_device.py  ld_measure.py  ld_saturation.py  manual_calibrate_encoder.py  moteus.py  moteus_tool.py  multiplex.py  posix_aioserial.py  protocol.py  pythoncan.py  pythoncan_device.py  reader.py  regression.py  router.py  transport.py  transport_device.py  transport_factory.py  transport_wrapper.py  win32_aioserial.py
lib/python/moteus/test/: calibrate_encoder_test.py  discovery_test.py  fdcanusb_test.py  fdcanusb_test_base.py  ld_saturation_test.py  mock_serial.py  moteus_test.py  moteus_tool_test.py  multiplex_test.py  protocol_test.py  reader_test.py  regression_test.py  router_test.py  transport_test.py
lib/python/moteus/test/testdata/: ld_be8108.json  ld_custom.json  ld_flipsky6374.json  ld_hoverboard.json  ld_mad8318.json  ld_mj5208.json  ld_spindle.json
lib/python/test/: bdist_test.sh  mypy_test.sh
lib/rust/: BUILD  Cargo.toml  README.md  clippy_test.sh  examples.bzl
lib/rust/examples/: bandwidth_test.rs  diagnostic_protocol.rs  discover.rs  gpio.rs  move_to.rs  multiservo.rs  protocol_only.rs  simple.rs
lib/rust/moteus/: BUILD  Cargo.toml  README.md
lib/rust/moteus-derive/: BUILD  Cargo.toml  README.md
lib/rust/moteus-derive/src/: lib.rs
lib/rust/moteus-protocol/: BUILD  Cargo.toml  README.md
lib/rust/moteus-protocol/src/: command.rs  diagnostic.rs  fdcanusb.rs  frame.rs  lib.rs  mode.rs  multiplex.rs  query.rs  register.rs  resolution.rs  scaling.rs
lib/rust/moteus/examples/: bandwidth_test.rs  diagnostic_protocol.rs  discover.rs  gpio.rs  move_to.rs  multiservo.rs  simple.rs
lib/rust/moteus/src/: async_controller.rs  blocking_controller.rs  command_ext.rs  command_types.rs  controller.rs  device_address.rs  diagnostic.rs  error.rs  lib.rs  move_to.rs
lib/rust/moteus/src/examples/: bandwidth_test.rs  diagnostic_protocol.rs  discover.rs  gpio.rs  mod.rs  move_to.rs  multiservo.rs  simple.rs
lib/rust/moteus/src/transport/: args.rs  async_factory.rs  async_fdcanusb.rs  async_singleton.rs  async_socketcan.rs  async_transport.rs  convenience.rs  device.rs  discovery.rs  factory.rs  fdcanusb.rs  mod.rs  singleton.rs  socketcan.rs  socketcan_common.rs  transaction.rs
moteus/: BUILD  as5047.h  assert.cc  atomic_event_queue.h  bldc_foc.cc  bldc_foc.h  bldc_servo.cc  bldc_servo.h  board_debug.cc  board_debug.h  bootloader.cc  bootloader.h  bridge_test.py  calibrate_encoder.py  can_bootloader.cc  drv8323.cc  drv8323.h  error.cc  error.h  fdcan.cc  fdcan.h  fdcan_micro_server.h  fdcanusb_register_example.py  firmware_info.cc  firmware_info.h  flash.sh  foc.cc  foc.h  git_info.cc  git_info.h  git_info_linkstamp.cc  hardfault.s  hardfault_handler.c  hw.h  imu_junction.cc  imu_junction_assert.cc  imu_junction_dumb.cc  imu_junction_hardfault_handler.c  imu_junction_hw.h  irq_callback_table.cc  (+56 more)
protocol/: index.html
qualification/: pwm_rate.py  qdd100_torque_vs_speed.py  voltage_ripple.py
quick-start/: index.html
reference/: index.html
search/: search_index.json
tools/: bazel  python.bzl  workspace_status.sh
troubleshooting/: index.html
utils/: BUILD  apache2.rtf  calibrate.cc  calibrate.h  calibrate_encoder.py  clock_cal.cc  clock_cal.py  compare_encoders.py  compensate_cogging.py  compensate_encoder.py  cut_release_branch.py  decode_can_frame.py  download_bazel_deps.sh  dynamometer_drive.cc  dyno_static_torque_ripple.py  encode_firmware_version.py  encoder_bandwidth.py  extract_mpat_core.sh  extrapolated_motor_models.py  fdcanusb_capture.py  (+35 more)
(+438 files in other folders)
