[metadata]
name = moteus
author = mjbots Robotic Systems
author-email = info@mjbots.com
home-page = https://github.com/mjbots/moteus
version = attr: moteus.VERSION
description = moteus brushless controller library and tools
license = Apache 2.0
platform = any
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache 2.0
  Operating System :: OS Independent

[options]
packages = moteus
install_requires =
  pyserial >= "3.5"
  python_version >= "3.7"
